# merrycrispr

./: .dockerignore  .gitattributes  .gitignore  .pyre_configuration  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  README.rst  environment.yml  mypy.ini  pyproject.toml  release_notes.rst  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.mypy_cache/3.6/: __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copy.data.json  copy.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  math.data.json  math.meta.json  (+32 more)
.pyre/: pyre.stderr
CFD_Scoring/: cfd_score_calculator.py
docs/: .buildinfo  genindex.html  index.html  installation.html  merrycrispr.EnsemblRestClient.html  merrycrispr.assemble_library.html  merrycrispr.assemble_library.rst  merrycrispr.assemble_paired_library.html  merrycrispr.available_species.html  merrycrispr.build_bowtie_index.html  merrycrispr.display_gtf_features.html  merrycrispr.display_gtf_geneids.html  merrycrispr.display_gtf_genes.html  merrycrispr.extract.html  merrycrispr.extract_for_tss_adjacent.html  merrycrispr.find_spacers.html  merrycrispr.find_spacers.rst  merrycrispr.get_resources.html  merrycrispr.html  merrycrispr.main.html  merrycrispr.main.rst  merrycrispr.match_seq.html  merrycrispr.off_target_discovery.html  merrycrispr.off_target_scoring.html  merrycrispr.off_target_scoring.rst  merrycrispr.on_target_scoring.html  merrycrispr.on_target_scoring.rst  merrycrispr.scoreCas9offtarget.html  merrycrispr.score_entry.html  merrycrispr.score_entry.rst  merrycrispr.split_records.html  merrycrispr.sumofftargets.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
docsrc/: .buildinfo  Makefile  conf.py  installation.rst  merrycrispr.display_gtf_genes.rst  merrycrispr.match_seq.rst  merrycrispr.scoreCas9offtarget.rst  merrycrispr.split_records.rst  merrycrispr.sumofftargets.rst  usage.rst
merrycrispr/: .pyre_configuration  FindSpacers.py  GFFFeature.py  GFFextractor.py  OffTargetScoring.py  SeqExtractor.py  __init__.py  __main__.py  _version.py  bowtie_offtarget_prototyping.ipynb  find_spacers.py  findspacers.py  gffextractor_code_testing.ipynb  library_assembly.py  libraryassembly.py  merrycripsr_code_testing.ipynb  merrycrispr.py  merrycrispr_prototyping.ipynb  off_target_scoring.py  offtargetscoring.py  on_target_score_calculator.py  on_target_scoring.py  release_notes.rst  rule_set_one.py  seqextractor.py  species_getter.py  temp.fa
output/: genindex.html  index.html  installation.html  merrycrispr.assemble_library.html  merrycrispr.assemble_paired_library.html  merrycrispr.display_gtf_features.html  merrycrispr.display_gtf_geneids.html  merrycrispr.display_gtf_genes.html  merrycrispr.extract.html  merrycrispr.extract_for_tss_adjacent.html  merrycrispr.find_spacers.html  merrycrispr.html  merrycrispr.main.html  merrycrispr.match_seq.html  merrycrispr.off_target_discovery.html  merrycrispr.off_target_scoring.html  merrycrispr.on_target_scoring.html  merrycrispr.scoreCas9offtarget.html  merrycrispr.score_entry.html  merrycrispr.split_records.html  merrycrispr.sumofftargets.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js  usage.html
(+206 files in other folders)
